# danyals-aios

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging_setup.py  main.py
backend/app/cli/: __init__.py  provision_owner.py  seed_web2_vault.py  set_portal_logins.py
backend/app/core/: __init__.py  auth.py  deps.py  errors.py  metrics.py  middleware.py  observability.py  pagination.py  ratelimit.py  redis.py  security.py
backend/app/db/: __init__.py  activity_repo.py  audits_repo.py  backups_repo.py  clients_repo.py  content_repo.py  context_repo.py  cost_repo.py  database.py  milestones_repo.py  notifications_repo.py  offpage_repo.py  policy_repo.py  policy_watch_repo.py  portal_repo.py  report_grants_repo.py  reports_repo.py  rls_check.py  settings_repo.py  supabase.py  tasks_repo.py  team_repo.py  tickets_repo.py  tiers_repo.py  upsells_repo.py  vault_repo.py
backend/app/modules/: README.md  __init__.py
backend/app/rbac/: __init__.py  matrix.py
backend/app/routers/: __init__.py  activity.py  admin_public_audits.py  admin_users.py  ai_assist.py  audits.py  auth.py  backups.py  clients.py  command_center.py  content.py  context.py  cost.py  health.py  integrations.py  me.py  milestones.py  notifications.py  offpage.py  policy.py  portal.py  public.py  rbac.py  reports.py  settings.py  skills.py  tasks.py  team.py  tickets.py  tiers.py  upsells.py  vault.py
backend/app/schemas/: activity.py  ai_assist.py  audits.py  backups.py  clients.py  clients_business.py  command_center.py  content.py  context.py  cost.py  health.py  identity.py  milestones.py  notifications.py  offpage.py  policy.py  portal.py  portal_deliverables.py  portal_reports.py  portal_requests.py  rbac.py  reports.py  settings.py  skills.py  tasks.py  tickets.py  tiers.py  tool_workspace.py  upsells.py  vault.py
backend/app/services/: __init__.py  activity.py  ai_assist.py  audit_artifacts.py  backups.py  client_audits.py  client_requests.py  content_artifacts.py  content_generator.py  content_guard.py  content_layout.py  content_qa.py  content_research.py  content_schema.py  context_compactor.py  context_cost.py  context_service.py  context_vectorsync.py  cost_gate.py  cost_store.py  credentials.py  deliverables.py  integrations_status.py  login_credentials.py  notifications.py  passwords.py  policy_ask.py  policy_baseline.py  policy_radar.py  policy_watch.py  pricing.py  provisioning.py  report_viz.py  scheduled_jobs.py  sheetstore.py  skill_tokens.py  team_metrics.py  tokens.py  vault.py  web2_pipeline.py
backend/app/util/: __init__.py  text.py  timefmt.py
backend/docs/: ARCHITECTURE.md  CITATIONS-WEB2-CREDENTIALS.md  CONTENT-DOCTRINE.md  CONTENT-MODULE.md  CONTEXT-MODULE.md  ELEVATION-REPORT.md  PERF-BASELINE.md
backend/integrations/: __init__.py  audit_engine.py  b2.py  backlinks.py  captcha_solver.py  citation_apify.py  citation_apis.py  citation_bot.py  citation_status.py  citation_submitters.py  citations.py  content_providers.py  content_research.py  context_providers.py  embeddings.py  errors.py  ga4.py  google_oauth.py  gsc.py  http_client.py  images.py  keyword_data.py  llm.py  mcp_gateway.py  resend.py  sheets.py  slack.py  vectorstore.py  web2_credentials.py  web2_publishers.py  web2_status.py  wordpress.py
backend/tests/: __init__.py  conftest.py  test_activity.py  test_ai_assist.py  test_audit_artifacts.py  test_audit_engine_adapter.py  test_audit_task.py  test_audits_endpoints.py  test_audits_schema.py  test_auth.py  test_auth_endpoints.py  test_backlinks_own_profile.py  test_backups.py  test_celery.py  test_citation_engines.py  test_citation_gap.py  test_client_audits.py  test_client_boundary.py  test_client_nap.py  test_clients.py  test_command_center.py  test_config.py  test_content_endpoints.py  test_content_generator.py  test_content_golden.py  test_content_guard.py  test_content_layout.py  test_content_providers.py  test_content_qa.py  test_content_research.py  test_content_schema.py  test_content_schema_generator.py  test_content_worker.py  test_context.py  test_context_compactor.py  test_context_cost.py  test_context_failure_modes.py  test_context_freshness.py  test_context_providers.py  test_context_service.py  (+56 more)
backend/tests/integration/: __init__.py  test_audit_engine_live.py  test_auth_login.py  test_content_flow.py  test_context_api.py  test_context_budget.py  test_context_events.py  test_context_freshness.py  test_context_live.py  test_context_store.py  test_context_worker.py  test_db_identity.py  test_local_e2e.py  test_portal_isolation.py  test_public_funnel.py  test_repo_sql_parity.py  test_rls_gate.py  test_rls_matrix.py  test_route_auth_wiring.py  test_route_contracts.py  test_service_writes.py  test_supabase_e2e.py  test_tasks_flow.py  test_vault_flow.py
backend/tests/modules/: __init__.py
backend/tests/mutation/: __init__.py  run_mutation.py
backend/tests/perf/: __init__.py  load_probe.py
backend/workers/: __init__.py  celery_app.py
backend/workers/tasks/: __init__.py  audit.py  content.py  context.py  context_reconcile.py  offpage.py  ping.py  policy.py
danyals-audit-system/: .env.example  .gitignore  CLAUDE.md  GMB  Audit (1).xlsx  README.md  branding.json  pyproject.toml
danyals-audit-system/.claude/: settings.json
danyals-audit-system/.claude/commands/: audit-fix.md  audit-local.md  audit-quick.md  audit-track.md  audit.md
danyals-audit-system/audit_engine/: __init__.py  config.py  logging_setup.py  security.py
danyals-audit-system/checklists/: README.md  local.yaml  off-page.yaml  on-page.yaml  technical.yaml
danyals-audit-system/docs/: API_KEYS.md  client_handoff.md
danyals-audit-system/knowledge/: README.md
danyals-audit-system/scripts/: backfill_on097.py  generate_audit_pdf.py  generate_proposal_pdf.py  verify_coverage.py
danyals-audit-system/tests/: test_analyzers.py  test_parsers.py  test_quality_gates.py
(+865 files in other folders)
