[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aios-backend"
version = "0.1.0"
description = "AIOS platform backend - FastAPI API + Celery workers (Xegents AI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Xegents AI", email = "business.zainsaeed@gmail.com" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "httpx[http2]>=0.27",
    "certifi>=2024.2.2",       # shared TLS trust store for the per-request Supabase client
    "tenacity>=8.5",
    "celery[redis]>=5.4",
    "redis[hiredis]>=5.0",
    "supabase>=2.6",
    "sentry-sdk[fastapi]>=2.8",
    "pyjwt[crypto]>=2.9",      # verify Supabase access tokens (ES256/RS256 via JWKS)
    "email-validator>=2.1",    # pydantic EmailStr for user provisioning
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "asgi-lifespan>=2.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "psycopg[binary]>=3.2",   # RLS gate + Supabase Postgres integration tests
]

[tool.hatch.build.targets.wheel]
packages = ["app", "workers", "integrations"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast tests with no external services",
    "integration: tests that require Redis and/or Supabase",
]
