[project]
name = "seo-audit-os"
version = "0.1.0"
description = "Multi-agent SEO audit system for local SEO agencies, run as a Claude Code slash command"
authors = [
    { name = "AIOS", email = "business.zainsaeed@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    "httpx[http2]>=0.27",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.5",
    "typer>=0.12",
    "jinja2>=3.1",
]

[project.optional-dependencies]
crawl = [
    "playwright>=1.43",
    "firecrawl-py>=0.0.16",
]
reports = [
    "weasyprint>=62",
    "markdown>=3.6",
    "pygments>=2.18",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
seo-audit = "audit_engine.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audit_engine"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast pure-Python tests",
    "integration: tests that hit local files or fixtures",
    "live_api: tests that hit live external APIs (skipped by default)",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
